--- a/templates/index.html
+++ b/templates/index.html
@@ -1,27 +1,27 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Project Journal</title>
-</head>
-<body>
-<div>
-    <form action="." method="post">
-        <p>
-            <input type="text" name="title" placeholder="title"/>
-        </p>
-        <p>
-            <textarea name="body" id="" cols="30" rows="10"></textarea>
-        </p>
-        <button type="submit">Post</button>
+{% extends 'base.html' %}
+{% block body %}
+<div class="container">
+    <form action="." role="form" method="post" class="col-lg-12">
+        <div class="form-group">
+            <input type="text" name="title" class="form-control" placeholder="title" required/>
+        </div>
+        <div class="form-group">
+            <textarea class="form-control" name="body" id="" rows="5" required></textarea>
+        </div>
+        <div class="form-group" >
+            <button class="btn btn-primary btn-lg btn-block" type="submit">Post</button>
+        </div>
     </form>
+    {% for post in posts %}
+    <div>
+        <h2>{{ post.title }}</h2>
+        <a href="/post/{{post.key.urlsafe()}}" title="{{ post.modified_at }}">
+            {{ post.modified_at | pretty_time }}
+        </a>
+
+        <p>{{ post.body | render_markdown }}</p>
+    </div>
+    {% endfor %}
 </div>
 
-{% for post in posts %}
-<div>
-    <h2>{{ post.title }}</h2>
-    {{ post.created_at }}
-    <pre>{{ post.body }}</pre>
-</div>
-{% endfor %}
-</body>
-</html>
+{% endblock %}
