--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,7 @@
 {% extends 'base.html' %}
 {% block body %}
 <div class="container">
-    <form action="." role="form" method="post" class="col-lg-12">
-        <div class="form-group">
-            <input type="text" name="title" class="form-control" placeholder="title" required/>
-        </div>
-        <div class="form-group">
-            <textarea class="form-control" name="body" id="" rows="5" required></textarea>
-        </div>
-        <div class="form-group" >
-            <button class="btn btn-primary btn-lg btn-block" type="submit">Post</button>
-        </div>
-    </form>
+    <a href="/new/post" class="btn btn-lg btn-primary btn-block" >New</a>
     {% for post in posts %}
     <div>
         <h2>{{ post.title }}</h2>
