--- a/templates/post.html
+++ b/templates/post.html
@@ -1,15 +1,28 @@
 {% extends 'base.html' %}
 {% block body %}
-<form action="." role="form" method="post" class="col-lg-12">
+<form role="form" method="post" class="col-lg-12">
     <div class="form-group">
         <input type="text" name="title" class="form-control" placeholder="title" value="{{ post.title }}" required/>
     </div>
-    <div class="form-group">
-        <textarea class="form-control" name="body" id="" rows="5" required>{{post.body}}</textarea>
+    <div class="form-group" >
+        <div id="epiceditor"></div>
+        <textarea style="display: none" id="form-post-body" class="form-control" name="body" id="" rows="5" required>{{post.body}}</textarea>
     </div>
     <div class="form-group">
         <button class="btn btn-primary btn-lg btn-block" type="submit">Save</button>
         <a class="btn btn-danger btn-lg btn-block" type="button" href="/">Cancel</a>
     </div>
 </form>
+<script src="/static/js/epiceditor.min.js"></script>
+<script>
+    var editor = new EpicEditor({
+        container:"epiceditor",
+        textarea:"form-post-body",
+        basePath:'/static/css/epiceditor',
+        theme:{
+             editor: '/themes/editor/epic-light.css'
+        },
+        autogrow:true
+    }).load();
+</script>
 {% endblock %}
