--- a/templates/base.html
+++ b/templates/base.html
@@ -13,5 +13,11 @@
 {% block body %}
 {% endblock %}
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+<script type="text/javascript">
+    jQuery(function(){
+        $("[rel=tooltip]").tooltip();
+    });
+</script>
 </body>
 </html>
