--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block body %}
 <div class="container">
-    <a href="/new/post" class="btn btn-lg btn-primary btn-block" >New</a>
+    <a href="/new/post" class="btn btn-lg btn-primary btn-block" style="margin: 2% 0;">New</a>
     {% for post in posts %}
     <div class="well well-lg">
         <h2>{{ post.title }}</h2>
