--- a/templates/post.html
+++ b/templates/post.html
@@ -9,8 +9,8 @@
         <textarea style="display: none" id="form-post-body" class="form-control" name="body" id="" rows="5" required>{{post.body}}</textarea>
     </div>
     <div class="form-group">
-        <button class="btn btn-primary btn-lg btn-block" type="submit">Save</button>
-        <a class="btn btn-danger btn-lg btn-block" type="button" href="/">Cancel</a>
+        <button class="btn btn-primary btn-lg btn-block" type="submit"  style="margin: 2% 0;" >Save</button>
+        <a class="btn btn-danger btn-lg btn-block" type="button" href="/" style="margin: 2% 0;" >Cancel</a>
     </div>
 </form>
 <script src="/static/js/epiceditor.min.js"></script>
