--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>
+        {%block title%}
+        LOG !
+        {% endblock %}
+    </title>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
     <style type="text/css">
         body{
