--- a/templates/index.html
+++ b/templates/index.html
@@ -4,17 +4,26 @@
     <a href="/new/post" class="btn btn-lg btn-primary btn-block" style="margin: 2% 0;">New</a>
     {% for post in posts %}
     <div class="well well-lg">
-        <a href="/post/delete/{{post.key.urlsafe()}}"
-           rel="tooltip"
-           data-placement="left"
-           title="Delete {{ post.title }}"
-           class="pull-right btn btn-xs btn-danger">
-            <span class="glyphicon glyphicon-trash"></span>
-        </a>
+        <div class="btn-group pull-right">
+            <a href="/post/delete/{{post.key.urlsafe()}}"
+               rel="tooltip"
+               data-placement="bottom"
+               title="Delete '{{ post.title }}'"
+               class=" btn btn-danger">
+                <span class="glyphicon glyphicon-trash"></span>
+            </a>
+            <a href="/post/{{post.key.urlsafe()}}"
+               class="btn btn-info"
+               rel="tooltip"
+               title="Edit '{{post.title}}'"
+               data-placement="bottom" >
+                <span class="glyphicon glyphicon-pencil"></span>
+            </a>
+        </div>
         <h2>{{ post.title }}</h2>
-        <a href="/post/{{post.key.urlsafe()}}" data-placement="right" data-toggle="tooltip" rel="tooltip" title="{{ post.modified_at }}">
+        <span  data-placement="right" data-toggle="tooltip" rel="tooltip" title="{{ post.modified_at }}">
             {{ post.modified_at | pretty_time }}
-        </a>
+        </span>
 
         <p>{{ post.body | render_markdown }}</p>
     </div>
